# ProgramminginAI

./: .gitignore  CMakeLists.txt  README.md  hw1.ipynb  hw1.py  model.ckpt
lab4_attachments/: task1_operators.py  test_task1_backward.py  test_task1_forward.py
lab5_attachments/: task0_autodiff.py  task1_optimizer.py
src/: CMakeLists.txt
src/backend/cpu/: CMakeLists.txt  cmp_tensor.cc  cmp_tensor.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h
src/backend/cuda/: CMakeLists.txt  cmp_tensor.cu  cmp_tensor.h  convolution.cu  convolution.h  mat_mul.cu  mat_mul.h  mat_transpose.cu  mat_transpose.h  pooling.cu  pooling.h  reduce.cuh  relu.cu  relu.h  sigmoid.cu  sigmoid.h  softmax_and_CELoss.cu  softmax_and_CELoss.h  utils.h
src/basics/: CMakeLists.txt  device.cc  device.h  log.h  mem.cc  mem.h  tensor.cc  tensor.h
src/example/: CMakeLists.txt  hw1.cc  hw2.cc  hw3.py
src/op/: CMakeLists.txt  cmp_tensor.cc  cmp_tensor.h  context.cc  context.h  convolution.cc  convolution.h  mat_mul.cc  mat_mul.h  pooling.cc  pooling.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h  softmax_and_CELoss.cc  softmax_and_CELoss.h  utils.h
src/pybind/: CMakeLists.txt  basics.cc  basics.h  op.cc  op.h  pybind.cc
